Addition of handlers.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,58 @@
             </li>
           </ul>
           <div class="navigation__ctas">
-            <button class="btn btn-secondary">sign up</button>
+            <a href="#signup" class="navigation__link btn btn-secondary"
+              >sign up</a
+            >
             <button class="btn">contact us</button>
           </div>
           <button class="hamburger"></button>
           <div class="overlay"></div>
         </nav>
       </div>
+
+      <header class="header">
+        <div class="header__text-box"></div>
+        <div class="header__img-box"></div>
+      </header>
+
+      <main class="main">
+        <section class="section services" id="services">
+          <div class="services__upper"></div>
+          <div class="services__slider">
+            <div class="services__card"></div>
+          </div>
+        </section>
+        <section class="section about" id="about">
+          <div class="about__container">
+            <div class="about__img-box"></div>
+            <div class="about__text-box"></div>
+          </div>
+          <div class="about__container">
+            <div class="about__text-box"></div>
+            <div class="about__img-box"></div>
+          </div>
+        </section>
+
+        <section class="section projects" id="projects">
+          <div class="projects__container"></div>
+        </section>
+        <section class="section testamonials" id="testamonials">
+          <div class="testamonials__slider">
+            <div class="testamonials__card"></div>
+            <div class="testamonials__card"></div>
+          </div>
+        </section>
+        <section class="section blog" id="blog">
+          <article class="blog__article"></article>
+          <article class="blog__article"></article>
+        </section>
+        <section class="section signup" id="signup">
+          <form action="#" class="signup__form"></form>
+        </section>
+      </main>
+
+      <footer></footer>
     </div>
   </body>
 </html>
